--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About Zonelets</title>
+    <title>About scio medios</title>
     <link rel="icon" href="./images/favicon.png" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8"> 
-    <link href="./style/style.css" rel="stylesheet" type="text/css" media="all">    
+    <link href="./style/nude.css"" rel="stylesheet" type="text/css" media="all">    
   </head>
   <body>
     <div id="container">
