--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <div id="content">    
     
       <h1>About</h1>
-      <p>[Under Construction!]</p>
+      <p>Blog de el grupo scio medios , medios alternativos radio tv prensa </p>
       
     </div> <!-- end of div id="content" -->
     <div id="footer"></div>
